add inverted conditions info to ghidra post

--- a/_posts/2024-05-05-ghidra.md
+++ b/_posts/2024-05-05-ghidra.md
@@ -14,7 +14,41 @@ Back when I was talking to the ex-Microprose employee, they told me they had to 
 
 I've been aware of the existence of [Ghidra](https://ghidra-sre.org/) for a while now, and I've even tried opening the game's executables with it, but the result was not encouraging. Ghidra can decompile assembly code into C, but it is not really meant for reversing 16bit code -- as I understand it was developed at NSA, mainly for taking apart malware samples. Modern stuff, not old stuff. The code it outputs for 16bit binaries is largely nonsense, especially around memory access -- it just doesn't seem to understand segmented addressing, but then again, who does? 😋 However, it can recover the control flow pretty well. So what if I could fix the code where Ghidra makes a mess of things, while relying on it to sort out the convoluted control flow mess for me?
 
-That's what I ended up doing, I just copy-pasted the Ghidra-generated code for the whole routine into my editor and started tweaking it line by line by looking into IDA at the same time. Occassionally, I needed to do some experimenting in a sample DOS .exe application on the side to figure stuff out, but I was making progress (slowly). 
+That's what I ended up doing, I just copy-pasted the Ghidra-generated code for the whole routine into my editor and started tweaking it line by line by looking into IDA at the same time. Occassionally, I needed to do some experimenting in a sample DOS .exe application on the side to figure stuff out, but I was making progress (slowly).
+
+One minor problem with Ghidra output (as far as the control flow is concerned, not considering any operations inside control structures) is that it tends to reverse the order of `if-else` blocks sometimes compared to what MSC generates. So for example this code compiled with MSC:
+
+{% highlight cpp %}
+if (a == 0) {
+  // do stuff
+}
+else {
+  // do other stuff
+}
+{% endhighlight %}
+
+...would get turned into the following assembly:
+
+{% highlight nasm %}
+cmp a, 0
+jnz otherStuff
+; do stuff
+otherStuff:
+; do other stuff
+{% endhighlight %}
+
+In other words, an inverse conditional jump instruction (`jnz` - Jump if Not Zero) is used in comparison to the C condition (`a == 0`). This however preserves the logical ordering of blocks from C, so it's easier to follow. Ghidra will often output this back from the assembly:
+
+{% highlight cpp %}
+if (a != 0) {
+  // do other stuff
+}
+else {
+  // do stuff
+}
+{% endhighlight %}
+
+This can get confusing if the conditional blocks contain many operations, potentially inside other nested blocks, one needs to check carefully if the order of the blocks matches the disassembly annd invert the condition and the order if necessary.
 
 When I'm writing this, the C file with this routine still does not build due to unresolved data references (more on that later), but I've finished rewriting the source code (coming in at around 370 lines, including comments), and the control flow looks consistent. I still need to fix the data layout problem, but it feels like I'm past my slump. Below is a sample of the code I wrote on top of Ghidra's mess, so the reader has an idea of what we are dealing with here:
 
