link to restunts

--- a/_posts/2022-12-09-reversing-3.md
+++ b/_posts/2022-12-09-reversing-3.md
@@ -25,7 +25,7 @@ As a side note, the fact that it is a somewhat mindless process, naturally leads
 
 A problem with the naive approach is that transcribing the code without some method to verify the work along the way takes a long time, where at the end you are guaranteed to have made at least several mistakes that will be hard to find and debug, and you just assume the reimplementation is faithful (that would be the naive part).
 
-So, we need a way to measure the degree of similarity between the original and the recreation. But how to go about it? The problem (and part of the reason why I started this journal) is that while there have been many successful reverse engineering projects, the maintainers rarely go into detail about their methods. I found some notes from the [restunts project](https://re.stunts.no/status/) which aims to reverse engineer the old racing game [Stunts](https://en.wikipedia.org/wiki/Stunts_(video_game)), and it looked like those people have some automatic framework for checking the validity of their reimplementation - but I was unable to learn anything more specific about the exact methodology.
+So, we need a way to measure the degree of similarity between the original and the recreation. But how to go about it? The problem (and part of the reason why I started this journal) is that while there have been many successful reverse engineering projects, the maintainers rarely go into detail about their methods. I found [some notes](https://re.stunts.no/status/) from the [restunts project](https://forum.stunts.hu/index.php?board=90.0) which aims to reverse engineer the old racing game [Stunts](https://en.wikipedia.org/wiki/Stunts_(video_game)), and it looked like those people have some automatic framework for checking the validity of their reimplementation - but I was unable to learn anything more specific about the exact methodology.
 
 We could binarily compare the compiled recreation with the original, but obtaining a binarily identical output with the original might be next to impossible - there are just too many variables that can influence the ordering of code and data in a compiled binary: compiler flags, linking order, code order in the input files... It is ideal and [some projects](https://arstechnica.com/gaming/2020/05/beyond-emulation-the-massive-effort-to-reverse-engineer-n64-source-code/) managed to pull it off, but chasing it may be a pipe dream that could just as well hold a project back. For me, I was unable to make progress for a long time because I used to think aiming for perfect binary-level faithfullness was the only way to go. And yeah, I know that the old compiler I'm working with will not do much code reordering or other optimizations, and that pragmas exist that allow me to put specific functions in specific segments, but there was just [so much that could go wrong](https://reverseengineering.stackexchange.com/questions/27811/how-to-maintain-function-ordering-in-an-executable-when-replacing-machine-code-w), and the fact that I would need to wait until the very end, when the last piece falls into place before getting the answer "did I do it right?" meant that the risk was unacceptable for me. 
 
