instruction matching post 3

--- a/_posts/2024-05-05-ghidra.md
+++ b/_posts/2024-05-05-ghidra.md
@@ -535,4 +535,4 @@ startCode1:4865                 mov     ax, wldReadBuf4.field_2[si]
 startCode1:4869                 sub     ax, wldReadBuf6.field_2[di]
 {% endhighlight %}
 
-I also made my Python script which parses IDA listings to auto-generate header files for C compatible with structure data. It doesn't spit out structure layouts for C automatically (yet), but at least I don't have to manually rewrite the headers every time I mix things up in IDA. As I mentioned in the introduction, the routine still does not compile due to not all data references being resolved on the C side, but I'm confiden't I can work it out in a couple days. Then it will just be a matter of running `mzdiff` on the end result, and likely a couple of iterations to iron out the remaining discrepancies. But at least it feels doable, which I couldn't say before I opted to use Ghidra for recovering the control flow. I think I might try to use it more in the future, even despite its limitations.
+I also made my Python script which parses IDA listings to auto-generate header files for C compatible with structure data. It doesn't spit out structure layouts for C automatically (yet), but at least I don't have to manually rewrite the headers every time I mix things up in IDA. As I mentioned in the introduction, the routine still does not compile due to not all data references being resolved on the C side, but I'm confident I can work it out in a couple days. Then it will just be a matter of running `mzdiff` on the end result, and likely a couple of iterations to iron out the remaining discrepancies. But at least it feels doable, which I couldn't say before I opted to use Ghidra for recovering the control flow. I think I might try to use it more in the future, even despite its limitations.
