--- a/_posts/2023-11-08-imatching2.md
+++ b/_posts/2023-11-08-imatching2.md
@@ -257,6 +257,6 @@ This results in the following code:
 
 It puts the number of bytes in CX (`mov cx, 0x6`), then divides it by 2 (`shr cx, 1`) to obtain the number of 16-bit words to transfer in bulk with `repne movsw`, and if the count was uneven, `adc cx, cx/repne movsb` will transfer the remainder. Here, the count is even, but as you can see it's not smart enough to get rid of the `adc` thing. I've tried everything that I could think of, set different optimizations like `/Oa` (no aliasing present, pinky swear), changed the type of the arrays to `int` instead of `char` (`memcpy()` takes `void *` so it should not matter, but maybe the compiler checks it?), tried specifying explicit sizes for the arrays, used pointers instead - nothing worked.
 
-What, you thought I had answers? Sorry, [not this time]({% post_url 2024-06-10-imatching3 %}). I have no idea how to make this match. The closest I've been able to get was to build with MSC 6.0 - it was smart enough to figure out it didn't need `adc/movsb` any more. But it emitted `rep movsw` instead, so it's still not a match, and ultimately useless. There are `nop` instructions before and after this routine, which *might* mean it comes from a separate C source file of its own, and was built with a different compiler and different flags than the rest of the code, but I don't know what those might be, and I'm not eager to relive the [Great Hunt]({% post_url 2023-05-17-compiler %}) at this time. What I ended up doing was to ignore this routine and move on -- for now. I might get a bathroom epiphany, or I will end up rewriting it into non-identical code at the end. 80% is a long way to go, so I'm not going to waste it getting hung up on this. 
+What, you thought I had answers? Sorry, not this time. I have no idea how to make this match. The closest I've been able to get was to build with MSC 6.0 - it was smart enough to figure out it didn't need `adc/movsb` any more. But it emitted `rep movsw` instead, so it's still not a match, and ultimately useless. There are `nop` instructions before and after this routine, which *might* mean it comes from a separate C source file of its own, and was built with a different compiler and different flags than the rest of the code, but I don't know what those might be, and I'm not eager to relive the [Great Hunt]({% post_url 2023-05-17-compiler %}) at this time. What I ended up doing was to ignore this routine and move on -- for now. I might get a [bathroom epiphany]({% post_url 2024-06-10-imatching3 %}), or I will end up rewriting it into non-identical code at the end. 80% is a long way to go, so I'm not going to waste it getting hung up on this. 
 
 Till next time then.
