whatnow post rewrite, css style change

--- a/_posts/2023-05-18-compiler2.md
+++ b/_posts/2023-05-18-compiler2.md
@@ -137,7 +137,7 @@ ERROR: Instruction mismatch in routine unknown at 1000:011a/01011a: jmp short 0x
 1000:011e/01011e: cmp byte [0x76e], 0x78           != 1000:011a/01011a: call far 0x16ac09d1
 </pre>
 
-Because the versions have actual code differences (beyond what comes from using a different compiler), I'm pointing the tool to specific offsets in both to get them to converge, but the loop is present in both. The left one is the 1991 version, with the loop unoptimized like Borland can do. The one on the right is the 1989 version, optimized like MSC (or Borland with `-O`) would do. Elsewhere, both match up on register reuse, and usage of `add sp,2` and `sub ax,ax`. I'm pretty sure the 1989 version was actually built with MSC 5.1. Which means the loop could not have been written in inline assembly which is not supported in that compiler, unless they specifically rewrote it for the 1991 release, which I don't find likely.
+Because the versions have actual code differences (beyond what comes from apparently using a different compiler), I'm pointing the tool to specific offsets in both to get them to converge, but the loop is present in both. The left one is the 1991 version, with the loop unoptimized like Borland can do. The one on the right is the 1989 version, optimized like MSC (or Borland with `-O`) would do. Elsewhere, both match up on register reuse, and usage of `add sp,2` and `sub ax,ax`. I'm pretty sure the 1989 version was actually built with MSC 5.1. Which means the loop could not have been written in inline assembly which is not supported in that compiler, unless they specifically rewrote it for the 1991 release, which I don't find likely.
 
 Sadly, this is where things stand today. I still don't know what compiler was used for the 1991 version. I wish I could end this post with a happy ending, but this is not a fairy tale, and I wanted to give a true account of the amount of research and trial and error goes into doing a project like this.
 
