--- a/_posts/2023-09-02-compiler3.md
+++ b/_posts/2023-09-02-compiler3.md
@@ -134,7 +134,7 @@ The problem this time is that it's not enough to skip a couple of instructions. 
 
 I need to go back and figure out which compiler was used and with what flags. Without having that part down, I'm screwed. So I catch a deep breath and dive into it again.
 
-First thing I tried was getting rid of the suspense and putting the Watcom question out of the way. I could not locate a copy of Watcom C 6.0/7.0 which appear to best match the release date of the game, so I tried the next best thing with [OpenWatcom](http://open-watcom.github.io/). Hopefully they did not change the code generation too much in 30+ years? The code it produced didn't look close at all. I tried several optimization variants but there were just too many differences all over. I particular, `test ax,ax` was used instead of `or ax,ax`, multiple registers were pushed in preambles of functions, arithmetic registers were used instead of immediate values in instructions etc. Scratch that off, at least until I can find a copy of the old version, but I don't think it's a likely target.
+First thing I tried was getting rid of the suspense and putting the Watcom question out of the way. I could not locate a copy of Watcom C 6.0/7.0 which appear to best match the release date of the game, so I tried the next best thing with [OpenWatcom](http://open-watcom.github.io/). Hopefully they did not change the code generation too much in 30+ years? The code it produced didn't look close at all. I tried several optimization variants but there were just too many differences all over. In particular, `test ax,ax` was used instead of `or ax,ax`, multiple registers were pushed in preambles of functions, arithmetic registers were used instead of immediate values in instructions etc. Scratch that off, at least until I can find a copy of the old version, but I don't think it's a likely target.
 
 The standalone versions of [QuickC](https://en.wikipedia.org/wiki/QuickC) are still on the table. Version 1.01 was bundled with MSC 5.1 and I tried it in Part 2, but it produced horribly unoptimized code. Wikipedia says that QuickC was introduced as Microsoft's answer to Borland's Turbo C - an enthusiast-oriented compiler that is cheaper and a step down from the big-boy MSC. Turbo C produces quite neat code, so maybe the 2.x releases of Quick C are somewhat better if they want to compete with Turbo C? But at the same time it shoud not be too good, or I will end up with the same problems as with using the full-featured MSC right now. Well, no luck again, with no optimization flags it uses `mov ax,0` instead of `sub ax,ax` which I need. With `/Ot` it uses `xor ax,ax` (and signedness of the argument it's creating does not matter). It also puts a `jmp short` to a loop condition at the end and does some other weird stuff. It's not the right one.
 
@@ -164,7 +164,7 @@ Doesn't look useful, which is probably why I ignored them in the past. The game 
 <pre>
 ninja@dell:eaglestrike$ make verify
 --- build running cl from msc510
-cl /Gs /Zi /Id:\f15-se2 /DMSC_VER=5 /c /Foe:\start.obj f15-se2\start.c
+cl /Gs <r>/Zi</r> /Id:\f15-se2 /DMSC_VER=5 /c /Foe:\start.obj f15-se2\start.c
 f15-se2\start.c
 f15-se2\start.c(104) : warning C4021: 'openShowPic' : too few actual parameters
 f15-se2\start.c(121) : warning C4021: 'openShowPic' : too few actual parameters
