--- a/_posts/2023-09-02-compiler3.md
+++ b/_posts/2023-09-02-compiler3.md
@@ -9,7 +9,7 @@ category: f15-se2
 
 After writing up the previous part of the story of the futile compiler chase, I was pretty burned out. I had tried every compiler and option that could have conceivably been used by whoever modified the code of F15 SE2 for the 1991 scenario disk update before producing the final build and turning it over to manufacturing, yet that search turned out fruitless. The opcodes smelled of MSC 5.1. But it could not be forced to emit the specific sequence of `jmp short` instructions that was present in the original. Borland compilers could, but they produced differences elsewhere that likewise could not be made to go away. A classic catch-22.
 
-I wanted to make progress on the reconstruction so I gave up on trying to make it perfect. I implemented options in the [tool](https://github.com/neuviemeporte/mzretools) that I use for comparing my reconstruction with the binary, which let it skip a number of differing instructions in both executables and moved on. I was not very happy about it, but I was able to  finish `main()` and move on to other functions that way. I kept using MSC 5.1 because it seemed to produce the best matching code overall. Things seemed to be moving along until one day distaster struck. The next function to rewrite from assembly to C was supposed to be this one:
+I wanted to make progress on the reconstruction so I gave up on trying to make it perfect. I implemented options in the [tool](https://github.com/neuviemeporte/mzretools) that I use for comparing my reconstruction with the original, which let it skip a number of differing instructions in both executables and moved on. I was not very happy about it, but I was able to  finish `main()` and move on to other functions that way. I kept using MSC 5.1 because it seemed to produce the best matching code overall. Things seemed to be moving along until one day distaster struck. The next function to rewrite from assembly to C was supposed to be this one:
 
 {% highlight nasm %}
 waitMdaCgaStatus proc near
@@ -226,6 +226,6 @@ That explains everything. Unlike `/Od` which disables optimizations completely, 
 
 The commit history on my git repo for the reconstruction shows that I first hit the problematic loop for which I was unable to write C code that would exactly match the game's opcodes on 29th March. It's the end of August and I finally figured it out. Everything works now, there were a couple of divergences which were easy to tweak into 100% matching code. It's actually eerie watching mzdiff display no skips and large swaths of exactly equal instructions, with only the occasional offset difference in orange. 
 
-So, did I just "waste" 5 months? No, I don't think so. I learned a lot about how the compiler works and got a feel for the flow of opcodes and how they map to C code. I can now write easier conditions or loops as I read them. I can tell optimized from unoptimized code at a glance. It was extremely frustrating for a while, but the sense of satisfaction I got from finally finding the magic flag that somebody forgot to disable before making the final build is proportionally exhilarating. I managed to uncover a cool fact about the game, and it being built in debug mode means the instructions will be likely easier to follow.
+So, did I just "waste" 5 months? No, I don't think so. I learned a lot about how the compiler works and got a feel for the flow of opcodes and how they map to C code. I can now write easier conditions or loops as I read them. I can tell optimized from unoptimized code at a glance. It was extremely frustrating for a while, but the sense of satisfaction I got from finally finding the magic flag that somebody forgot to disable before making the final build is proportionally exhilarating. I managed to uncover a cool fact about the game, and it being (at least partially) built in debug mode means the instructions will be likely easier to follow.
 
 It's my own fault really for not RTFM'ing more carefully and assuming only the `/O` options could influence optimizations, but you have to admit that the option descriptions in the output of the compiler are misleading, to put it mildly. I recall searching the manual for all occurences of "optimization" at some point, but this is a scanned document and text search does not always work on it. Or maybe it did find the occurence, but I glossed over it after seeing "symbols"? Well, no point in wondering now. The project is back on track, I'm churning out functions like mad. I'm looking forward to being done with `START.EXE` and moving onto `EGAME.EXE` in the near future.
