finished unstart posts

--- a/_posts/2024-12-31-unstart.md
+++ b/_posts/2024-12-31-unstart.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: The thing won't START
-category: other
+category: f15-se2
 ---
 <small>(_This post is part of a [series]({% link category/f15-se2.html %}) on the subject of my hobby project, which is recreating the C source code for the 1989 game [F-15 Strike Eagle II]({% post_url 2022-06-05-origins %}) by reverse engineering the original binaries._)</small>
 
@@ -31,13 +31,13 @@ I will keep trying to run CodeView under VirtualBox, 86box and PCem. But I've ru
 As I already remarked, I already have the source code, so how about instrumenting it? Ain't no better thing than a little `printf`-debugging, amirite?
 
 {% highlight cpp %}
-// 🔵 I need to be able to turn all this crap off
-// for the "release" version, so that my comparison
+// I need to be able to turn all this crap off at a flick 
+// of a switch for the "release" version, so that my comparison 
 // with the original still works
 #ifdef DEBUG
 #define TRACE(x) my_trace x
 
-// 🔵 print stuff out to a logfile, accept args through a va_list
+// print stuff out to a logfile, accept args through a va_list
 void my_vtrace(const char* fmt, va_list ap) {
     static FILE *stream = NULL;
     if (stream == NULL) {
@@ -54,7 +54,7 @@ void my_vtrace(const char* fmt, va_list ap) {
     fflush(stream);
 }
 
-// 🔵 this is the actual main trace function, the previous one is
+// this is the actual main trace function, the previous one is
 // just so that I can pass variable args into it
 void my_trace(const char* fmt, ...) {
     va_list ap;
@@ -63,7 +63,7 @@ void my_trace(const char* fmt, ...) {
     va_end(ap);
 }
 
-// 🔵 convenience trace function for calling from assembly code,
+// convenience trace function for calling from assembly code,
 // where I want to be able to define the log messages directly
 // in the code segment, so I will need to be passing a far pointer to it
 void my_fartrace(const char far *msg, ...) {
@@ -85,7 +85,7 @@ void my_fartrace(const char far *msg, ...) {
     va_end(ap);
 }
 #else // not DEBUG
-#define TRACE(x) // 🔵 empty macro
+#define TRACE(x) // empty macro
 #endif
 {% endhighlight %}
 
@@ -166,16 +166,78 @@ ENDIF
 It took a while to get all this working, but I'm pretty happy with the result. However, the results still raised more questions rather than provide answers. I got as far as this assembly routine:
 
 {% highlight nasm %}
+; trace messages for debugging
+msg1 db 'showPicFile(): entering, handle %d pagenum %d',0
+msg2 db 'showPicFile(): after gfx_3b_clearbuf, handle %d pageidx %d',0
+msg3 db 'showPicFile(): after fillrow',0
+msg4 db 'showPicFile(): exiting',0
+msg5 db 'showPicFile(): gfx_35 returned',0
+msg6 db 'showPicFile(): ---row %u, rowOffset 0x%x',0
+msg8 db 'showPicFile(): before loop, screenBufSize = 0x%x',0
 
+; ------------------------------startCode1:0x33d0------------------------------
+_showPicFile proc near
+    handle = word ptr 4
+    pageNum = word ptr 6
+    push bp
+    mov bp, sp
+    push di
+    push si
+    push es
+    push bp
+    ; calling the trace macro to print stuff using the C routine
+    trace msg1,bp+4,bp+6
+    mov ax, offset read512FromFileIntoBuf
+    mov _readFromFilePtr, ax
+    mov ax, [bp+handle]
+    mov _tmpFileHandle, ax
+    mov ax, [bp+pageNum]
+    mov _tmpPageIndex, ax
+    call nullsub_1
+    mov si, _tmpPageIndex
+    ; get either vmem addr or allocated page buffer into es
+    call far ptr _gfx_jump_38_getPageBuf 
+    call far ptr _gfx_jump_3b_clearBuf ;zeroes out 32000 bytes
+    trace msg2,_tmpFileHandle,_tmpPageIndex
+    mov _row, 0
+    mov _screenBufSize, 0FA00h
+    trace msg8,_screenBufSize
+    ; iterates over rows of the image 
+nextRow:
+    mov di, _row ;argument for gfx slot
+    call far ptr _gfx_jump_3a_getRowOffset ;returned in ax
+    mov _rowOffset, ax
+    trace msg6, _row, _rowOffset
+    call decodePicRow
+    mov di, _rowOffset
+    mov bp, offset _picDecodedRowBuf ;source for memcpy
+    mov bx, _row
+    call far ptr _gfx_jump_33_fillRow ;destination: es:di (gfx page:rowOffset)
+    trace msg3 
+    mov di, _rowOffset
+    call far ptr _gfx_jump_35
+    trace msg5
+    inc _row
+    sub _screenBufSize, 320
+    jnz short nextRow ;argument for gfx slot
+    trace msg4
+    pop bp
+    pop es
+    pop si
+    pop di
+    mov sp, bp
+    pop bp
+    retn
+_showPicFile endp
 {% endhighlight %}
 
-Here's the mystery part. When I notice the freeze and close the emulator, I can see the logs from several iterations of the loop iterating over the image rows, say up to about row 4. The destination offsets make sense, and the destination segment has the expected value of `0xA000`, the video memory. 
+Here's the mystery part. When I notice the freeze and close the emulator, I can see the logs from several iterations of the loop iterating over the image rows. The destination offsets make sense, and the destination segment has the expected value of `0xA000`, the video memory. 
 
 However, the code does not exactly freeze inside any of the routines. If I keep the emulator running longer, the log has entries for more rows (I got up to row 70 waiting for ~5mins). It seems to be progressing, just at a glacial pace? I might try leaving it on and see if it ever succeeds, but so far I haven't found the patience so far. There seems to be something weird about how/when DosBox flushes the logfile to the host OS. I'm pretty sure I am losing some output lines when I'm closing the frozen game.
 
 I decided to add some extra code to my C tracing routine to include a time delta value in seconds from the previous log line, to see where the slowdown is occuring. But inspecting the output, I can see that almost all the deltas are 0 seconds, except for a single one taking 1 second. How can the program both be slow and fast at the same time?
 
-This is the worst kind of Heisenbug, a problem which changes, or appears to change its behaviour when I try to look at it. I can't catch it in the debugger, and traces are unreliable. How can I figure out the cause of a problem which seems to defy causality?
+This is the worst kind of bug, a problem which changes, or appears to change its behaviour when I try to look at it. I can't catch it in the debugger, and traces are unreliable. How can I figure out the cause of a problem which seems to defy causality?
 
 # This is going to take a while
 
@@ -185,10 +247,9 @@ For now, I seem to be out of (good) ideas. What I'm left with is as following:
 2. Compare the execution with the original executable, see if the variables have roughly the same values. Would be a pain though, maybe the DosBox debugger's named variable lists (LV/SV/IV) could make it easier.
 3. Perhaps my time delta logging has problems. Would need to check it against a `sleep()` call, but this compiler doesn't have one, so I need to write one myself.
 4. Try running the "frozen" game a little longer, see if it ever gets anywhere. 
-5. Comment out the switch to graphical mode, send the logs to stdout, see them closer to something resembling real time.
 
 One more thing that comes to mind is the layout of the data segment. Part of the point of all this was to make the executable independent of the data layout. But perhaps I missed some offset when changing numeric literals to variable offsets. Or there might be a piece of code that expects a piece of data residing right after another, and my executable doesn't match that. So I could try making the data layout aligned with the original, at least for now. The good news with that is that since I still have all the data in assembly, most of it matches already. After dumping the data segments between the original and the recreation, then comparing the hex dumps in WinMerge, I can see they only seem to differ in the location where the libc data is placed - it comes in the middle of the data segment in the original, while my recreation has it at the end. I think I could tweak the linking order and get a perfect match, hopefully that might be enough to get it to run, then maybe I can figure out where it's breaking by changing things a bit at a time.
 
 There's also the more frightening prospect - perhaps a numeric constant was supposed to be just that, and I blithely changed it into an offset to a variable? That would be hard to find at this point.
 
-A lot of open questions, hardly any answers. But at least I'm back into it, interested and invested. I'm sure I can crack it given time. When I do, I'll be sure to write up Part 2.
+A lot of open questions, hardly any answers. But at least I'm back into it, interested and invested. I'm sure I can crack it given time. When I do, I'll be sure to write up [Part 2]({% post_url 2025-01-01-unstart2 %}).
