Minor typos etc

--- a/_posts/2024-06-21-nowwhat.md
+++ b/_posts/2024-06-21-nowwhat.md
@@ -80,7 +80,7 @@ Theoretical(*) coverage (visited & compared + reachable excluded area) is 23944/
 </pre>
 
 The comparison tool does not base its operation on the IDA listing, but the map file that originally came from `mzmap`, and was tweaked manually thereafter to correspond to the layout seen by IDA.
-Also, `mzdiff` starts off from an entrypoint in both executables, and walks the opcodes in both in lockstep, comparing them and storing calls and jumps in a DFS search queue. Because it does not know the layout of the reconstructed binary (the mapfile describes the original), it does not know where an equivalent reconstructed routine resides for comparison - it has to scrape that info from watching call and jump destinations. This means that it cannot compare what it cannot reach, and it cannot reach what cannot be determined from static analysis alone. So far, I haven't encountered a case where it failed to reach a relevant routine, but it does say that reachable code was only 87% of the area covered by the map - all the rest will need to be carefully investigated to figure out if it's really unreachable, or just the tool can't figure out how to get there - and develop capabilities to instruct it in that regard. But for what it's worth, IDA also couldn't find any xrefs to those routines (I checked), so might be the executable just contains a bunch of leftover garbage -- or historical gems, depending on one's perspective.
+Also, `mzdiff` starts off from an entrypoint in both executables, and walks the opcodes in both in lockstep, comparing them and storing calls and jumps in a DFS search queue. Because it does not know the layout of the reconstructed binary (the mapfile describes the original), it does not know where an equivalent reconstructed routine resides for comparison - it has to scrape that info from watching call and jump destinations (_update 2025: not true anymore, see [here]({% post_url 2024-12-31-newtooling %}) for info on improvements_). This means that it cannot compare what it cannot reach, and it cannot reach what cannot be determined from static analysis alone. So far, I haven't encountered a case where it failed to reach a relevant routine, but it does say that reachable code was only 87% of the area covered by the map - all the rest will need to be carefully investigated to figure out if it's really unreachable, or just the tool can't figure out how to get there - and develop capabilities to instruct it in that regard. But for what it's worth, IDA also couldn't find any xrefs to those routines (I checked), so might be the executable just contains a bunch of leftover garbage -- or historical gems, depending on one's perspective.
 
 It also counts more routines than before (182) as excluded - in addition to the libc routines, the mapfile instructs the tool to ignore additional routines. In general, the mapfile syntax supports the following annotations on mapfile routine specifications:
 
